# DTU-02456-Deep-Learning-Project

./: .gitignore  .gitmodules  README.md  justfile  pyproject.toml
Documents/Report/: default_tokenizer_example.json  eval_sample_0_gt.txt  eval_sample_0_prediction.txt  latex_sample.tex  latex_sample_overleaf.tex  main.typ  references.bib  typst_sample.typ  typst_tokenizer_example.json
Documents/Report/typst_template/: docs.typ  example.typ  template.typ
Documents/Synopsis/: main.typ  references.bib
dataset/: .gitignore  1_compile_metadata.ipynb  1_extract_images.ipynb  2_construct_webdataset.ipynb  2_postprocess_metadata.ipynb  README.md  common.py  convert.py  inspect_metadata.ipynb
dataset/data/: README.md
notebooks/: TrOCR_test.ipynb  model_performance.ipynb  tokenisation_comparison.ipynb  trainer.ipynb
tokens/: typst_tokenizer.ipynb
tokens/typst_syntax/manual/: README.md  alignment.txt  common.txt  datatypes.txt  default_operators.txt  extras.txt  math__accent.txt  math__attach.txt  math__binom.txt  math__cancel.txt  math__cases.txt  math__class.txt  math__equation.txt  math__frac.txt  math__left_right.txt  math__matrix.txt  math__primes.txt  math__roots.txt  math__sizes.txt  math__stretch.txt  math__styles.txt  math__text_operator.txt  math__under_over.txt  math__variants.txt  math__vec.txt
typstscribe/: const.py  image.py  typst.py
typstscribe/data/: hoang_dataset.py
typstscribe/dataset/: common.py  convert.py
typstscribe/utils/: unrar.py
