[project]
name = "typstscribe"
version = "0.1.0"
description = "A Deep Learning Powered Typst OCR Transcription Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "rarfile>=4.2",
    "tex2typ>=0.0.3",
    "typst>=0.14.1",
    "webdataset>=1.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
