[project]
name = "typstscribe"
version = "0.1.0"
description = "A Deep Learning Powered Typst OCR Transcription Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "evaluate>=0.4.6",
    "huggingface-hub[cli]>=0.36.0",
    "hydra-core>=1.3.2",
    "jiwer>=4.0.0",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "papermill>=2.6.0",
    "pillow>=12.0.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tex2typ>=0.0.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers[torch]>=4.57.1",
    "typst",
    "webdataset>=1.0.2",
]


[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
typst = { git = "https://github.com/JeppeKlitgaard/typst-py", rev = "main" }
